Kernel compile error when rendering with OpenCL GPU. #52443

Closed
opened 2017-08-18 17:35:10 +02:00 by bigbad · 5 comments

Win10, GPU AMD 390X

blender-2.79-ac28a4f-win64

I get this error when rendering anything with Cycles on my GPU.

From console:


Device init success
Compiling OpenCL program split
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program split build output: source\kernel/kernel_light.h:849:12: error: implicit declaration of function 'triangle_area' is invalid in C99
                                area = triangle_area(V[0], V[1], V[2]);
                                       ^
source\kernel/kernel_light.h:849:12: note: did you mean 'triangle_normal'?
source\kernel/geom/geom_triangle.h:26:26: note: 'triangle_normal' declared here
ccl_device_inline float3 triangle_normal(KernelGlobals *kg, ShaderData *sd)
                         ^
1 error generated.

error: Clang front-end compilation failed!
Frontend phase failed compilation.
Error: Compiling CL to IR

Error: Failed loading render kernel, see console for errors

Other Blender versions work.

Win10, GPU AMD 390X blender-2.79-ac28a4f-win64 I get this error when rendering anything with Cycles on my GPU. From console: ``` Device init success Compiling OpenCL program split OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program split build output: source\kernel/kernel_light.h:849:12: error: implicit declaration of function 'triangle_area' is invalid in C99 area = triangle_area(V[0], V[1], V[2]); ^ source\kernel/kernel_light.h:849:12: note: did you mean 'triangle_normal'? source\kernel/geom/geom_triangle.h:26:26: note: 'triangle_normal' declared here ccl_device_inline float3 triangle_normal(KernelGlobals *kg, ShaderData *sd) ^ 1 error generated. error: Clang front-end compilation failed! Frontend phase failed compilation. Error: Compiling CL to IR Error: Failed loading render kernel, see console for errors ``` Other Blender versions work.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bigbad

Added subscriber: @bigbad

This issue was referenced by blender/cycles@dd96a32007

This issue was referenced by blender/cycles@dd96a32007de60ee03c117c4f61daa14ee870cc2

This issue was referenced by 4d428d14af

This issue was referenced by 4d428d14af29420e6a76ddd4ba9749e3e67f91d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#52443
No description provided.