Fix T52443: Cycles OpenCL build error after recent mesh lights changes.